--- a/src/pages/Homepage/components/Banner/Banner.style.css
+++ b/src/pages/Homepage/components/Banner/Banner.style.css
@@ -1,5 +1,5 @@
 .banner{
-    height: 56vh;
+    height: 58vh;
     background-position: left;
     background-repeat: no-repeat;
     background-size: cover;
@@ -10,12 +10,12 @@
     background:linear-gradient(to top, black, transparent);
     position:absolute;
     left: 0;
-    height: 56vh;
+    height: 59vh;
     width: 100%;
 }
 
 .banner-text-area{
-    width: 36%;
+    width: 45%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -25,4 +25,15 @@
 
 .banner-text-area > *{
     z-index: 2;
+}
+
+@media (max-width: 464px) {
+    .banner-text-area{
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 100%;
+        padding: 2rem;
+    }
 }
