--- a/src/common/MovieCard/MovieCard.style.css
+++ b/src/common/MovieCard/MovieCard.style.css
@@ -68,4 +68,12 @@
         width: 190px;
         height: 120px;
     }
+
+    .movie-card:hover{
+        width: 200px;
+        height: 220px;
+        transform: scale(1.3) translateZ(20px);
+        z-index: 2;
+        border-radius: 7px;
+    }
 }
