--- a/src/common/MovieSlider/MovieSlider.style.css
+++ b/src/common/MovieSlider/MovieSlider.style.css
@@ -30,10 +30,13 @@
     .carousel-container {
         display: flex;
         justify-content: space-between;
+        bottom: 40px;
     }
 
     .movie-slider{
         margin-left: 12px;
     }
+
+    
   }
   
